--- a/Tina/data/metacycle_outputs/metacycle_processed/process_meta_result.ipynb
+++ b/Tina/data/metacycle_outputs/metacycle_processed/process_meta_result.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,420 @@
     "\n",
     "for group in groups:\n",
     "    ProcessMeta2dResults(group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group = 'nr1d1'\n",
+    "WT = pd.read_csv(f\"../meta2d_{group}_WT.txt\",sep=\"\\t\",index_col='CycID').iloc[:,15:] #only keep the meta2d columns\n",
+    "KO = pd.read_csv(f\"../meta2d_{group}_KO.txt\",sep=\"\\t\",index_col='CycID').iloc[:,15:] \n",
+    "WT.columns = [f\"WT_{i}\" for i in WT.columns]\n",
+    "KO.columns = [f\"KO_{i}\" for i in KO.columns]\n",
+    "WTKO = pd.concat([WT,KO],axis=1)\n",
+    "\n",
+    "WTKO = WTKO.loc[CVonlyGenes] #only keep the CV oscillating genes\n",
+    "\n",
+    "WTKO['rAMP_meta2d_WTdivKO'] = WTKO['WT_meta2d_rAMP']/WTKO['KO_meta2d_rAMP']\n",
+    "WTKO['rAMP_meta2d_WTsubKO'] = WTKO['WT_meta2d_rAMP']-WTKO['KO_meta2d_rAMP']\n",
+    "WTKO['phase_meta2d_abs_WTsubKO'] = abs(WTKO['WT_meta2d_phase']-WTKO['KO_meta2d_phase'])\n",
+    "#update phase difference value to be between 0 and 12 (in 24 h day/light cycle) \n",
+    "#if x is > 12, then x = 24-x\n",
+    "filt = WTKO['phase_meta2d_abs_WTsubKO']>12\n",
+    "WTKO.loc[filt,'phase_meta2d_abs_WTsubKO'] = 24-WTKO.loc[filt,'phase_meta2d_abs_WTsubKO']\n",
+    "\n",
+    "# WTKO.to_csv(f\"meta2d_{group}.csv\",sep=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WT_meta2d_pvalue</th>\n",
+       "      <th>WT_meta2d_BH.Q</th>\n",
+       "      <th>WT_meta2d_period</th>\n",
+       "      <th>WT_meta2d_phase</th>\n",
+       "      <th>WT_meta2d_Base</th>\n",
+       "      <th>WT_meta2d_AMP</th>\n",
+       "      <th>WT_meta2d_rAMP</th>\n",
+       "      <th>KO_meta2d_pvalue</th>\n",
+       "      <th>KO_meta2d_BH.Q</th>\n",
+       "      <th>KO_meta2d_period</th>\n",
+       "      <th>KO_meta2d_phase</th>\n",
+       "      <th>KO_meta2d_Base</th>\n",
+       "      <th>KO_meta2d_AMP</th>\n",
+       "      <th>KO_meta2d_rAMP</th>\n",
+       "      <th>rAMP_meta2d_WTdivKO</th>\n",
+       "      <th>rAMP_meta2d_WTsubKO</th>\n",
+       "      <th>phase_meta2d_abs_WTsubKO</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CycID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0610007C21Rik</th>\n",
+       "      <td>0.002529</td>\n",
+       "      <td>0.013476</td>\n",
+       "      <td>23.268261</td>\n",
+       "      <td>21.262371</td>\n",
+       "      <td>17.137550</td>\n",
+       "      <td>1.218733</td>\n",
+       "      <td>0.071115</td>\n",
+       "      <td>0.000280</td>\n",
+       "      <td>0.004112</td>\n",
+       "      <td>24.130324</td>\n",
+       "      <td>13.632583</td>\n",
+       "      <td>16.031559</td>\n",
+       "      <td>2.978109</td>\n",
+       "      <td>0.185765</td>\n",
+       "      <td>0.382820</td>\n",
+       "      <td>-0.114651</td>\n",
+       "      <td>7.629788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0610007N19Rik</th>\n",
+       "      <td>0.012727</td>\n",
+       "      <td>0.048336</td>\n",
+       "      <td>26.173258</td>\n",
+       "      <td>4.726291</td>\n",
+       "      <td>2.863483</td>\n",
+       "      <td>1.016610</td>\n",
+       "      <td>0.355026</td>\n",
+       "      <td>0.285949</td>\n",
+       "      <td>0.476131</td>\n",
+       "      <td>24.610169</td>\n",
+       "      <td>13.316709</td>\n",
+       "      <td>3.120305</td>\n",
+       "      <td>0.509358</td>\n",
+       "      <td>0.163240</td>\n",
+       "      <td>2.174871</td>\n",
+       "      <td>0.191786</td>\n",
+       "      <td>8.590418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0610007P08Rik</th>\n",
+       "      <td>0.001196</td>\n",
+       "      <td>0.009708</td>\n",
+       "      <td>23.729068</td>\n",
+       "      <td>3.753143</td>\n",
+       "      <td>2.723939</td>\n",
+       "      <td>0.356258</td>\n",
+       "      <td>0.130788</td>\n",
+       "      <td>0.490811</td>\n",
+       "      <td>0.771468</td>\n",
+       "      <td>26.380488</td>\n",
+       "      <td>12.754569</td>\n",
+       "      <td>2.360855</td>\n",
+       "      <td>0.175191</td>\n",
+       "      <td>0.074207</td>\n",
+       "      <td>1.762485</td>\n",
+       "      <td>0.056581</td>\n",
+       "      <td>9.001427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0610007P22Rik</th>\n",
+       "      <td>0.001922</td>\n",
+       "      <td>0.011618</td>\n",
+       "      <td>23.268261</td>\n",
+       "      <td>9.978009</td>\n",
+       "      <td>3.260288</td>\n",
+       "      <td>0.802133</td>\n",
+       "      <td>0.246031</td>\n",
+       "      <td>0.375234</td>\n",
+       "      <td>0.607873</td>\n",
+       "      <td>24.380488</td>\n",
+       "      <td>24.008954</td>\n",
+       "      <td>3.231630</td>\n",
+       "      <td>0.384768</td>\n",
+       "      <td>0.119063</td>\n",
+       "      <td>2.066393</td>\n",
+       "      <td>0.126968</td>\n",
+       "      <td>9.969054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0610008F07Rik</th>\n",
+       "      <td>0.309383</td>\n",
+       "      <td>0.606435</td>\n",
+       "      <td>22.875561</td>\n",
+       "      <td>14.181801</td>\n",
+       "      <td>2.437977</td>\n",
+       "      <td>1.169345</td>\n",
+       "      <td>0.479637</td>\n",
+       "      <td>0.478033</td>\n",
+       "      <td>0.756135</td>\n",
+       "      <td>24.380488</td>\n",
+       "      <td>10.689777</td>\n",
+       "      <td>1.894125</td>\n",
+       "      <td>0.147331</td>\n",
+       "      <td>0.077783</td>\n",
+       "      <td>6.166335</td>\n",
+       "      <td>0.401854</td>\n",
+       "      <td>3.492024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zswim3</th>\n",
+       "      <td>0.001199</td>\n",
+       "      <td>0.009710</td>\n",
+       "      <td>23.496743</td>\n",
+       "      <td>3.540956</td>\n",
+       "      <td>1.592611</td>\n",
+       "      <td>0.265121</td>\n",
+       "      <td>0.166470</td>\n",
+       "      <td>0.001260</td>\n",
+       "      <td>0.008038</td>\n",
+       "      <td>23.438140</td>\n",
+       "      <td>15.111064</td>\n",
+       "      <td>1.848583</td>\n",
+       "      <td>0.275669</td>\n",
+       "      <td>0.149125</td>\n",
+       "      <td>1.116311</td>\n",
+       "      <td>0.017345</td>\n",
+       "      <td>11.570108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zswim5</th>\n",
+       "      <td>0.905352</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>24.397506</td>\n",
+       "      <td>19.891061</td>\n",
+       "      <td>6.572489</td>\n",
+       "      <td>0.746058</td>\n",
+       "      <td>0.113512</td>\n",
+       "      <td>0.109379</td>\n",
+       "      <td>0.228083</td>\n",
+       "      <td>23.310605</td>\n",
+       "      <td>19.491467</td>\n",
+       "      <td>6.957822</td>\n",
+       "      <td>0.547697</td>\n",
+       "      <td>0.078717</td>\n",
+       "      <td>1.442036</td>\n",
+       "      <td>0.034796</td>\n",
+       "      <td>0.399594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zxdc</th>\n",
+       "      <td>0.000096</td>\n",
+       "      <td>0.002636</td>\n",
+       "      <td>24.081937</td>\n",
+       "      <td>21.663998</td>\n",
+       "      <td>4.741983</td>\n",
+       "      <td>0.566598</td>\n",
+       "      <td>0.119485</td>\n",
+       "      <td>0.119633</td>\n",
+       "      <td>0.244704</td>\n",
+       "      <td>23.251094</td>\n",
+       "      <td>19.642843</td>\n",
+       "      <td>4.694422</td>\n",
+       "      <td>0.253169</td>\n",
+       "      <td>0.053930</td>\n",
+       "      <td>2.215578</td>\n",
+       "      <td>0.065556</td>\n",
+       "      <td>2.021155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zzef1</th>\n",
+       "      <td>0.157974</td>\n",
+       "      <td>0.391870</td>\n",
+       "      <td>23.243675</td>\n",
+       "      <td>12.928209</td>\n",
+       "      <td>50.120186</td>\n",
+       "      <td>5.136526</td>\n",
+       "      <td>0.102484</td>\n",
+       "      <td>0.002539</td>\n",
+       "      <td>0.010035</td>\n",
+       "      <td>24.173258</td>\n",
+       "      <td>6.915233</td>\n",
+       "      <td>53.409909</td>\n",
+       "      <td>3.029726</td>\n",
+       "      <td>0.056726</td>\n",
+       "      <td>1.806655</td>\n",
+       "      <td>0.045758</td>\n",
+       "      <td>6.012975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>l7Rn6</th>\n",
+       "      <td>0.001159</td>\n",
+       "      <td>0.009550</td>\n",
+       "      <td>23.671819</td>\n",
+       "      <td>3.643471</td>\n",
+       "      <td>6.758679</td>\n",
+       "      <td>1.750472</td>\n",
+       "      <td>0.258996</td>\n",
+       "      <td>0.002813</td>\n",
+       "      <td>0.010701</td>\n",
+       "      <td>23.594453</td>\n",
+       "      <td>15.630737</td>\n",
+       "      <td>6.098172</td>\n",
+       "      <td>1.181487</td>\n",
+       "      <td>0.193745</td>\n",
+       "      <td>1.336792</td>\n",
+       "      <td>0.065252</td>\n",
+       "      <td>11.987266</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4929 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               WT_meta2d_pvalue  WT_meta2d_BH.Q  WT_meta2d_period  \\\n",
+       "CycID                                                               \n",
+       "0610007C21Rik          0.002529        0.013476         23.268261   \n",
+       "0610007N19Rik          0.012727        0.048336         26.173258   \n",
+       "0610007P08Rik          0.001196        0.009708         23.729068   \n",
+       "0610007P22Rik          0.001922        0.011618         23.268261   \n",
+       "0610008F07Rik          0.309383        0.606435         22.875561   \n",
+       "...                         ...             ...               ...   \n",
+       "Zswim3                 0.001199        0.009710         23.496743   \n",
+       "Zswim5                 0.905352        1.000000         24.397506   \n",
+       "Zxdc                   0.000096        0.002636         24.081937   \n",
+       "Zzef1                  0.157974        0.391870         23.243675   \n",
+       "l7Rn6                  0.001159        0.009550         23.671819   \n",
+       "\n",
+       "               WT_meta2d_phase  WT_meta2d_Base  WT_meta2d_AMP  WT_meta2d_rAMP  \\\n",
+       "CycID                                                                           \n",
+       "0610007C21Rik        21.262371       17.137550       1.218733        0.071115   \n",
+       "0610007N19Rik         4.726291        2.863483       1.016610        0.355026   \n",
+       "0610007P08Rik         3.753143        2.723939       0.356258        0.130788   \n",
+       "0610007P22Rik         9.978009        3.260288       0.802133        0.246031   \n",
+       "0610008F07Rik        14.181801        2.437977       1.169345        0.479637   \n",
+       "...                        ...             ...            ...             ...   \n",
+       "Zswim3                3.540956        1.592611       0.265121        0.166470   \n",
+       "Zswim5               19.891061        6.572489       0.746058        0.113512   \n",
+       "Zxdc                 21.663998        4.741983       0.566598        0.119485   \n",
+       "Zzef1                12.928209       50.120186       5.136526        0.102484   \n",
+       "l7Rn6                 3.643471        6.758679       1.750472        0.258996   \n",
+       "\n",
+       "               KO_meta2d_pvalue  KO_meta2d_BH.Q  KO_meta2d_period  \\\n",
+       "CycID                                                               \n",
+       "0610007C21Rik          0.000280        0.004112         24.130324   \n",
+       "0610007N19Rik          0.285949        0.476131         24.610169   \n",
+       "0610007P08Rik          0.490811        0.771468         26.380488   \n",
+       "0610007P22Rik          0.375234        0.607873         24.380488   \n",
+       "0610008F07Rik          0.478033        0.756135         24.380488   \n",
+       "...                         ...             ...               ...   \n",
+       "Zswim3                 0.001260        0.008038         23.438140   \n",
+       "Zswim5                 0.109379        0.228083         23.310605   \n",
+       "Zxdc                   0.119633        0.244704         23.251094   \n",
+       "Zzef1                  0.002539        0.010035         24.173258   \n",
+       "l7Rn6                  0.002813        0.010701         23.594453   \n",
+       "\n",
+       "               KO_meta2d_phase  KO_meta2d_Base  KO_meta2d_AMP  KO_meta2d_rAMP  \\\n",
+       "CycID                                                                           \n",
+       "0610007C21Rik        13.632583       16.031559       2.978109        0.185765   \n",
+       "0610007N19Rik        13.316709        3.120305       0.509358        0.163240   \n",
+       "0610007P08Rik        12.754569        2.360855       0.175191        0.074207   \n",
+       "0610007P22Rik        24.008954        3.231630       0.384768        0.119063   \n",
+       "0610008F07Rik        10.689777        1.894125       0.147331        0.077783   \n",
+       "...                        ...             ...            ...             ...   \n",
+       "Zswim3               15.111064        1.848583       0.275669        0.149125   \n",
+       "Zswim5               19.491467        6.957822       0.547697        0.078717   \n",
+       "Zxdc                 19.642843        4.694422       0.253169        0.053930   \n",
+       "Zzef1                 6.915233       53.409909       3.029726        0.056726   \n",
+       "l7Rn6                15.630737        6.098172       1.181487        0.193745   \n",
+       "\n",
+       "               rAMP_meta2d_WTdivKO  rAMP_meta2d_WTsubKO  \\\n",
+       "CycID                                                     \n",
+       "0610007C21Rik             0.382820            -0.114651   \n",
+       "0610007N19Rik             2.174871             0.191786   \n",
+       "0610007P08Rik             1.762485             0.056581   \n",
+       "0610007P22Rik             2.066393             0.126968   \n",
+       "0610008F07Rik             6.166335             0.401854   \n",
+       "...                            ...                  ...   \n",
+       "Zswim3                    1.116311             0.017345   \n",
+       "Zswim5                    1.442036             0.034796   \n",
+       "Zxdc                      2.215578             0.065556   \n",
+       "Zzef1                     1.806655             0.045758   \n",
+       "l7Rn6                     1.336792             0.065252   \n",
+       "\n",
+       "               phase_meta2d_abs_WTsubKO  \n",
+       "CycID                                    \n",
+       "0610007C21Rik                  7.629788  \n",
+       "0610007N19Rik                  8.590418  \n",
+       "0610007P08Rik                  9.001427  \n",
+       "0610007P22Rik                  9.969054  \n",
+       "0610008F07Rik                  3.492024  \n",
+       "...                                 ...  \n",
+       "Zswim3                        11.570108  \n",
+       "Zswim5                         0.399594  \n",
+       "Zxdc                           2.021155  \n",
+       "Zzef1                          6.012975  \n",
+       "l7Rn6                         11.987266  \n",
+       "\n",
+       "[4929 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "WTKO"
    ]
   }
  ],
